plugins {
    id 'java'
    id 'application'
    id 'org.jetbrains.kotlin.jvm' version '1.9.23'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'org.randvid'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
}


tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'org.randvid.directedgraphapp'
    mainClass = 'org.randvid.directedgraphapp.GraphApplicationKt'

    applicationDefaultJvmArgs = [
            '--add-exports=java.desktop/com.sun.imageio.plugins.png=plantuml',
            '-Djava.awt.headless=true',
            '-Dplantuml.thread.count=2',
    ]
}

kotlin {
    jvmToolchain(21)
}

javafx {
    version = '23.0.1'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation("org.openjfx:javafx-controls:23")
    implementation("net.sourceforge.plantuml:plantuml:8059")

    testImplementation("org.junit.jupiter:junit-jupiter-api:5.10.2")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.10.2")
    testImplementation("org.junit.jupiter:junit-jupiter-params:5.10.2")
}


test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}